android/CVIESDK/include/cvie2.h


typedef int CvieResult;      
typedef int CviePixelFormat; 
typedef int CvieOptionType;  
typedef int CvieOptionId;    
typedef struct TCvieInstance* CvieInstance; 
typedef struct TCvieParameterSetting* CvieParameterSetting; 
typedef struct TCvieImageDescriptor* CvieImageDescriptor; 
#define CVIE_RESULT_OK 0 
#define CVIE_RESULT_BAD_HANDLE 3
#define CVIE_RESULT_USER_ABORTED 4
#define CVIE_RESULT_FILEIO_ERROR 6
#define CVIE_RESULT_ILLEGAL_COMMAND 7
#define CVIE_RESULT_INVALID_INPUT 8
#define CVIE_RESULT_INVALID_PARAMETER_FILE 9
#define CVIE_RESULT_LICENSE_ERROR 10
#define CVIE_RESULT_NOT_SUPPORTED 11
#define CVIE_RESULT_OUT_OF_MEMORY 16
#define CVIE_RESULT_FATAL_ERROR 5
#define CVIE_RESULT_UNKNOWN_ERROR 15
#define CVIE_PIXEL_FORMAT_U8 1  
#define CVIE_PIXEL_FORMAT_U16 2 
#define CVIE_PIXEL_FORMAT_S16 3 
#define CVIE_PIXEL_FORMAT_F32 4 
#define CVIE_OPTION_TYPE_INT32 1 
#define CVIE_OPTION_TYPE_FLOAT 2 
#define CVIE_OPTION_TYPE_CSTR 3
#define CVIE_OPTION_TYPE_IMAGE_DESCRIPTOR 7 
#define CVIE_OPTION_CSTR_LICENSE_ID 2
#define CVIE_OPTION_INT32_TRACE_ENABLE 5
#define CVIE_INSTANCE_OPTION_CSTR_PARAMETER_FILE 116
#define CVIE_INSTANCE_OPTION_CSTR_ORIGINAL_PARAMETER_FILE 117
#define CVIE_INSTANCE_OPTION_CSTR_FLATTENED_PARAMETER_FILE 118
#define CVIE_INSTANCE_OPTION_INT32_NUM_THREADS 130
#define CVIE_INSTANCE_OPTION_CSTR_RSS_IDENTIFICATION_ANATOMY_LEVEL 2000
#define CVIE_INSTANCE_OPTION_CSTR_RSS_IDENTIFICATION_FILENAME_SETTING 2001
#define CVIE_SETTING_OPTION_FLOAT_RELATIVE_RESOLUTION_X 208
#define CVIE_SETTING_OPTION_FLOAT_RELATIVE_RESOLUTION_Y 209
#define CVIE_SETTING_OPTION_FLOAT_DEPTH_DEPENDENCE_TRANSITION_START 214
#define CVIE_SETTING_OPTION_FLOAT_DEPTH_DEPENDENCE_TRANSITION_END 215
#define CVIE_SETTING_OPTION_INT32_NUM_THREADS 210
#define CVIE_SETTING_OPTION_IMAGE_DESCRIPTOR_MASK 213
#define CVIE_API_VERSION 2007
CVIE_API CvieResult CVIE_DECL CvieEnter(int apiVersion);
CVIE_API CvieResult CVIE_DECL CvieExit();
CVIE_API const char* CVIE_DECL CvieGetLastError();
CVIE_API CvieResult CVIE_DECL CvieGetOption(CvieOptionId option, void* valueBuffer, int valueBufferSize, int* valueSize);
CVIE_API CvieResult CVIE_DECL CvieGetOptionInfo(CvieOptionId option, CvieOptionType* valueType, int* valueSize);
CVIE_API CvieResult CVIE_DECL CvieSetOption(CvieOptionId option, const void* valueBuffer, int valueBufferSize);
CVIE_API CvieResult CVIE_DECL CvieInstance_Create(CvieInstance* instance);
CVIE_API CvieResult CVIE_DECL CvieInstance_Destroy(CvieInstance* instance);
CVIE_API CvieResult CVIE_DECL CvieInstance_LoadParameterFile(CvieInstance instance, const char* fileName);
CVIE_API CvieResult CVIE_DECL CvieInstance_LoadParameterBuffer(CvieInstance instance, const char* data, int dataSize);
CVIE_API CvieResult CVIE_DECL CvieInstance_SaveParameterFile(CvieInstance instance, const char* fileName);
CVIE_API CvieResult CVIE_DECL CvieInstance_GetNumberOfSettings(CvieInstance instance, int* nSettings);
CVIE_API CvieResult CVIE_DECL CvieInstance_GetParameterSetting(
        CvieInstance instance, int settingIndex, CvieParameterSetting* parameterSetting);
CVIE_API CvieResult CVIE_DECL CvieInstance_GetOption(
        CvieInstance instance, CvieOptionId option, void* valueBuffer, int valueBufferSize, int* valueSize);
CVIE_API CvieResult CVIE_DECL CvieInstance_GetOptionInfo(
        CvieInstance instance, CvieOptionId option, CvieOptionType* valueType, int* valueSize);
CVIE_API CvieResult CVIE_DECL CvieInstance_SetOption(
        CvieInstance instance, CvieOptionId option, const void* valueBuffer, int valueBufferSize);
CVIE_API CvieResult CVIE_DECL CvieInstance_ReleaseMemory(CvieInstance instance);
CVIE_API CvieResult CVIE_DECL CvieParameterSetting_Setup(
        CvieParameterSetting setting, CvieImageDescriptor input, CvieImageDescriptor output);
CVIE_API CvieResult CVIE_DECL CvieParameterSetting_Enhance(CvieParameterSetting setting);
CVIE_API CvieResult CVIE_DECL CvieParameterSetting_GetOption(
        CvieParameterSetting setting, CvieOptionId option, void* valueBuffer, int valueBufferSize, int* valueSize);
CVIE_API CvieResult CVIE_DECL CvieParameterSetting_GetOptionInfo(
        CvieParameterSetting setting, CvieOptionId option, CvieOptionType* valueType, int* valueSize);
CVIE_API CvieResult CVIE_DECL CvieParameterSetting_SetOption(
        CvieParameterSetting setting, CvieOptionId option, const void* valueBuffer, int valueBufferSize);
typedef struct TCVIEDIInfo TCvieDIInfo;
CVIE_API CvieResult CVIE_DECL CvieParameterSetting_GetDIInfo(CvieParameterSetting setting, CvieOptionId option, TCvieDIInfo* info);
CVIE_API CvieResult CVIE_DECL CvieImageDescriptor_CreateForBuffer2D(
        CvieImageDescriptor* desc, int width, int height, CviePixelFormat format);
CVIE_API CvieResult CVIE_DECL CvieImageDescriptor_AttachBuffer2D(CvieImageDescriptor desc, void* data, int rowStrideInBytes);
CVIE_API CvieResult CVIE_DECL CvieImageDescriptor_CreateForBuffer3D(
        CvieImageDescriptor* desc, int width, int height, int depth, CviePixelFormat format);
CVIE_API CvieResult CVIE_DECL CvieImageDescriptor_AttachBuffer3D(
        CvieImageDescriptor desc, void* data, int rowStrideInBytes, int sliceStrideInBytes);
CVIE_API CvieResult CVIE_DECL CvieImageDescriptor_Detach(CvieImageDescriptor desc);
CVIE_API CvieResult CVIE_DECL CvieImageDescriptor_Destroy(CvieImageDescriptor* desc);
#define CVIE_INSTANCE_OPTION_CSTR_PARAMETER_DESCRIPTION 101         